teste e correções